--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,82 @@
-#root, html.body{
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    box-sizing: border-box;
+#root,
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  box-sizing: border-box;
 }
 
+.app {
+  height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    url("../img/city.jpg");
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.card {
+  background-color: whitesmoke;
+  width: 60%;
+  height: 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border-radius: 25px;
+  padding: 2%;
+  box-shadow: 10px 10px;
+}
+
+.heading {
+  display: flex;
+  align-items: center;
+  font-family: "Open Sans", sans-serif;
+}
+
+.button {
+  outline: none;
+  text-decoration: none;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  text-transform: uppercase;
+  padding: 12px 20px;
+  opacity: 1;
+  background-color: #ffffff;
+  border: 1px solid rgba(22, 76, 167, 0.6);
+  color: #164ca7;
+  font-size: 12px;
+  font-weight: 500;
+  letter-spacing: 0.7px;
+}
+
+.button:hover {
+  background-color: #164ca7;
+  color: white;
+}
+
+.button:hover span {
+  animation: storm 0.7s ease-in-out both;
+  animation-delay: 0.06s;
+}
+
+@media only screen and (max-width: 600px) {
+  .card {
+    width: 80%;
+    height: 40%;
+  }
+  .heading {
+    font-size: large;
+  }
+  .button span {
+    font-size: 10px;
+    font-weight: 400;
+  }
+}
